upated styling for the background and container

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tip Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="sub-container">
+            <div class="output-container">
+                <div id="output"></div>
+            </div>
+            <div class="input-container">
+                <input type="number" value="100">
+                <button type="button">Tip</button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
